samples/_failures_safe/1761288381_2625a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e53ec3e5.c: In function ‘main’:
./samples/SAFE/__tmp_e53ec3e5.c:169:9: error: expected declaration or statement at end of input
  169 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_e53ec3e5.c:169:9: error: expected declaration or statement at end of input
